workloads/hello-world/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-spring

spec:
  replicas: 4

  selector:
    matchLabels:
      app: hello-spring

  template:
    metadata:
      labels:
        app: hello-spring

    spec:

      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: hello-spring

        image: ghcr.io/hiteshguptagt/hello-spring:b041019

        imagePullPolicy: Always

        ports:
        - containerPort: 8080
