workloads/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello

spec:
  selector:
    app: hello-spring

  type: NodePort

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
