workloads/hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: '443'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:967170426815:certificate/a09de74a-4a1e-4a38-adea-ac56486bde14

    alb.ingress.kubernetes.io/group.name: platform

spec:

  ingressClassName: alb

  rules:

  - host: hello.hiteshops.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: hello-service

            port:

              number: 80
